Changed regular expressions wording

--- a/mics2015talk/mics2015talk.tex
+++ b/mics2015talk/mics2015talk.tex
@@ -249,7 +249,7 @@ clojure.core/conj (core.clj:83)
 			\begin{itemize}
   				\item wrap user's code in try/catch block
   				\item capture error message
-  				\item check against predefined regular expressions
+  				\item check against collection of regular expressions
   				\item replace with improved message
 			\end{itemize}
 	\end{itemize}
