Edited function-substitution section

--- a/mics2015talk/mics2015talk.tex
+++ b/mics2015talk/mics2015talk.tex
@@ -266,7 +266,7 @@ clojure.core/conj (core.clj:83)
 				"apple" must be a number but is a string.
 				\end{verbatim}
 				\item unable to handle compilation exceptions
-				\item can not handle student made functions
+				\item can not handle user-made functions
 				\item impractical to redefine all existing functions
 			\end{itemize}
 		\item Try/catch approach
