Edits to introduction.

--- a/mics2015talk/mics2015talk.tex
+++ b/mics2015talk/mics2015talk.tex
@@ -72,13 +72,13 @@ April 11, 2015\par}
 	\begin{itemize}
 		\item ClojurEd
 			\begin{itemize}
-				\item ongoing project
+				\item ongoing project at UMM
 				\item introduce Clojure in an introductory course
 			\end{itemize}
 		\item Our work focuses on error messages in Clojure
 			\begin{itemize}
-				\item focus on usability
 				\item error messages useful learning tool
+				\item focus on usability
 			\end{itemize}
 	\end{itemize}
 \end{frame}
@@ -89,10 +89,10 @@ April 11, 2015\par}
 \frametitle{Overview of Clojure}
 	\begin{itemize}
   	 \item Dynamically typed
-  	 \item Functional
-  	 \item Runs on the Java Virtual Machine (JVM)
-  	 \item Read-eval-print-loop (REPL)
   	 \item Data types immutable by default
+  	 \item Functional
+  	 \item Read-eval-print-loop (REPL)
+  	 \item Runs on the Java Virtual Machine (JVM)
 	 \end{itemize}
 \end{frame}
 
