Fixed hint slide

--- a/mics2015talk/mics2015talk.tex
+++ b/mics2015talk/mics2015talk.tex
@@ -365,14 +365,9 @@ clojure.core/conj (core.clj:83)
 		
 			\texttt{print(Hello World)}
 
-		\item Clojure error message:
 		
-  			 \begin{verbatim}
-	CompilerException java.lang.RuntimeException:
-Unable to resolve symbol: Hello in this context
-			\end{verbatim}
 			
-		\item Improved error message
+		\item Improved error message:
 		
 			\textcolor{PrettyGreen}{
 			\texttt{ERROR: Compilation error: name Hello is undefined}}
