I made some edits to the IDE slide.

--- a/mics2015talk/mics2015talk.tex
+++ b/mics2015talk/mics2015talk.tex
@@ -407,8 +407,7 @@ compiling:(compilation_errors/eof.clj:4:1)
 
 \begin{frame}
 \frametitle{Setup}
-	\begin{itemize}
-	\item IDE options
+	Current IDE options
 	\begin{itemize}
 		\item LightTable
 			\begin{itemize}
@@ -419,12 +418,12 @@ compiling:(compilation_errors/eof.clj:4:1)
 				\item newer, promising IDE
 			\end{itemize}
 		\item ongoing open source projects
+		\item IDE independent approach
 	\end{itemize}
-	\item Project manager
+	Project manager
 	\begin{itemize}
 		\item Leiningen
 		\item popular in Clojure community
-	\end{itemize}
 	\end{itemize}
 \end{frame}
 
