Changed green to blue

--- a/mics2015talk/mics2015talk.tex
+++ b/mics2015talk/mics2015talk.tex
@@ -20,7 +20,7 @@
 \definecolor{BlueViolet}{RGB}{138,43,226}
 \definecolor{Coquelicot}{RGB}{255, 56, 0}
 \definecolor{Teal}{RGB}{2,132,130}
-\definecolor{PrettyGreen}{RGB}{48,197,48}
+\definecolor{PrettyBlue}{RGB}{0,0,255}
 % Uncomment this if you want to show work-in-progress comments
 \newcommand{\comment}[1]{{\bf \tt  {#1}}}
 % Uncomment this if you don't want to show comments
@@ -283,7 +283,7 @@ compiling:(compilation_errors/eof.clj:4:1)
 				\begin{verbatim}
 				(+ 2 "apple")
 				\end{verbatim}
-				\textcolor{PrettyGreen}{
+				\textcolor{PrettyBlue}{
 				\texttt{In function +, the second argument
 				"apple" must be a number but is a string.
 				}}
@@ -316,7 +316,7 @@ compiling:(compilation_errors/eof.clj:4:1)
 			
 		\item Our modified error message:
 		
-			\textcolor{PrettyGreen}{
+			\textcolor{PrettyBlue}{
 			\texttt{Compilation error: name Hello is undefined}
 			}
 		\item Student edit:
@@ -342,7 +342,7 @@ compiling:(compilation_errors/eof.clj:4:1)
 	
 		\item Our modified error message:	
 	
-			\textcolor{PrettyGreen}{
+			\textcolor{PrettyBlue}{
 			\texttt{Attempted to use a string, but a function
 			was expected.}}
 	
@@ -376,7 +376,7 @@ compiling:(compilation_errors/eof.clj:4:1)
 			
 		\item Improved error message:
 		
-			\textcolor{PrettyGreen}{
+			\textcolor{PrettyBlue}{
 			\texttt{Compilation error: name Hello is undefined}}
 			
 		\item Hint:
