modified a few bullet points on one slide

--- a/mics2015talk/mics2015talk.tex
+++ b/mics2015talk/mics2015talk.tex
@@ -407,7 +407,8 @@ compiling:(compilation_errors/eof.clj:4:1)
 
 \begin{frame}
 \frametitle{Setup}
-	Current IDE options
+	\begin{itemize}
+	\item Current IDE options
 	\begin{itemize}
 		\item LightTable
 			\begin{itemize}
@@ -420,10 +421,11 @@ compiling:(compilation_errors/eof.clj:4:1)
 		\item ongoing open source projects
 		\item IDE independent approach
 	\end{itemize}
-	Project manager
+	\item Project manager
 	\begin{itemize}
 		\item Leiningen
 		\item popular in Clojure community
+	\end{itemize}
 	\end{itemize}
 \end{frame}
 
